# Q1_25_Builder_BoringDev

./: README.md
Rust Prereq/: Cargo.toml
Rust Prereq/src/: airdrop.rs  guy.rs  lib.rs  transfer.rs
Rust Prereq/src/programs/: turbin3_prereq.rs
airdrop/: WalletUtilities.js  WalletUtilities.ts  airdrop.js  airdrop.ts  enroll.js  enroll.ts  gen.js  gen.ts  package-lock.json  package.json  stuff.json  transfer.js  transfer.ts  tsconfig.json
airdrop/programs/: Turbin3_prereq.js  Turbin3_prereq.ts
solana-starter/ts/: package.json
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
