[package]
name = "rusttask"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.15.2"
bs58 = "0.4" 
solana-client = "1.15.2"
solana-program = "1.15.2"
borsh = "0.10.3"
lazy_static = "1.4"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }

[[bin]]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "airdrop"
path = "src/airdrop.rs"

[[bin]]
name = "transfer"
path = "src/transfer.rs"